[gd_scene load_steps=10 format=3 uid="uid://3swrxgj861s1"]

[ext_resource type="Script" path="res://bullets/bomb.gd" id="1_1u6dw"]
[ext_resource type="Shader" path="res://enemies/Enemy_dmg.gdshader" id="2_x2qag"]
[ext_resource type="Texture2D" uid="uid://c25y1qv86172m" path="res://bullets/sprites/бомбаспрайты_свечение.png" id="3_i2jud"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfchk"]
resource_local_to_scene = true
shader = ExtResource("2_x2qag")
shader_parameter/hit_opacity = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bl3j5"]
radius = 24.0

[sub_resource type="Animation" id="Animation_f4j0p"]
resource_name = "BOOOM"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_wki31"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/hit_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_iipmu"]
resource_name = "bombs"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1l46r"]
_data = {
"BOOOM": SubResource("Animation_f4j0p"),
"RESET": SubResource("Animation_wki31"),
"bombs": SubResource("Animation_iipmu")
}

[node name="Area2D" type="Area2D"]
z_index = 1
script = ExtResource("1_1u6dw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
material = SubResource("ShaderMaterial_vfchk")
position = Vector2(0, -16)
scale = Vector2(0.213333, 0.186667)
texture = ExtResource("3_i2jud")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bl3j5")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1l46r")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
